[gd_scene load_steps=11 format=2]

[ext_resource path="res://UFO/UFO.png" type="Texture" id=1]
[ext_resource path="res://UFO/UFO.gd" type="Script" id=2]
[ext_resource path="res://World/GreenLight.png" type="Texture" id=3]
[ext_resource path="res://UFO/Fish.png" type="Texture" id=4]
[ext_resource path="res://World/Swoosh.mp3" type="AudioStream" id=5]
[ext_resource path="res://UFO/DirChange.mp3" type="AudioStream" id=6]
[ext_resource path="res://UI/Music.mp3" type="AudioStream" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 28.0

[sub_resource type="Animation" id=2]
resource_name = "Animate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Fish:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -132.151, 0 ), Vector2( -28.913, 0 ), Vector2( -36, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fish:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "increase_score"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Die"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeathSoundEffect:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="UFO" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="GreenLight" type="Sprite" parent="."]
position = Vector2( -18.8284, 0 )
texture = ExtResource( 3 )

[node name="Fish" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -36, 0 )
rotation = 1.5708
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Animate"
anims/Animate = SubResource( 2 )
anims/Die = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="DeathSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="DirChangeSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="DirChangeSoundEffect" to="." method="_on_DirChangeSoundEffect_finished"]
